<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_item"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/search_text"/>
    <item
        android:id="@+id/notice_item"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/notice_text"/>
    <item
        android:id="@+id/group_item"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/group_text"/>
    <item
        android:id="@+id/my_item"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/my_text"/>
    <item
        android:id="@+id/chat_item"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/chat_text"/>
</menu>