<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostPageFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_200"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="12939자"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/upload_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/upload_text"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/save_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/upload_text_view"
            android:layout_margin="5dp"
            android:text="@string/save_text"
            android:textColor="@color/black"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:hint="@string/title_input_hint_text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/writing_edit_text" android:gravity="top"
                android:hint="@string/chat_input_hint_text" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/text_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_300"
        android:padding="10dp"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="7dp">
            <!--C - 나중에 ImageView 바꿔야
            하지만 일단 테스트 할때 편하게 구분하기 위하여
            편의상 TextView로 해둠 id는 나중에 바꿀 것을 대비하여 ImageView라고 해둔거 주의-->
            <TextView
                android:id="@+id/sort_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/sort_text"
                />
            <ImageView
                android:id="@+id/sort_text_menu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/sort_text_view"
                android:src="@drawable/text_menu_rectangle"/>
            <ImageView
                android:id="@+id/sort_text_menu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/sort_text_menu1"
                android:src="@drawable/text_menu_rectangle"/>
            <ImageView
                android:id="@+id/sort_text_menu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/sort_text_menu2"
                android:src="@drawable/text_menu_rectangle"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="7dp">
            <!--C - 나중에 ImageView 바꿔야
            하지만 일단 테스트 할때 편하게 구분하기 위하여
            편의상 TextView로 해둠 id는 나중에 바꿀 것을 대비하여 ImageView라고 해둔거 주의-->
            <TextView
                android:id="@+id/thick_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/thick_text"
                />
            <ImageView
                android:id="@+id/thick_text_menu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/thick_text_view"
                android:src="@drawable/text_menu_rectangle"/>
            <ImageView
                android:id="@+id/thick_text_menu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/thick_text_menu1"
                android:src="@drawable/text_menu_rectangle"/>
            <ImageView
                android:id="@+id/thick_text_menu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/thick_text_menu2"
                android:src="@drawable/text_menu_rectangle"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/colors_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/colors_text"
                    />
                <TextView
                    android:id="@+id/slope_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/colors_image_view"
                    android:layout_marginEnd="10dp"
                    android:text="@string/slope_text"
                    />
                <TextView
                    android:id="@+id/strike_through_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/slope_image_view"
                    android:layout_marginEnd="10dp"
                    android:text="@string/strike_through_text"
                    />
                <TextView
                    android:id="@+id/underline_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/strike_through_image_view"
                    android:layout_marginEnd="10dp"
                    android:text="@string/underline_text"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_200"
        android:padding="10dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <!--C - 나중에 ImageView 바꿔야
        하지만 일단 테스트 할때 편하게 구분하기 위하여
        편의상 TextView로 해둠 id는 나중에 바꿀 것을 대비하여 ImageView라고 해둔거 주의-->
        <TextView
            android:id="@+id/fill_upload_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_upload_text"
            />
        <TextView
            android:id="@+id/camera_text_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/fill_upload_image_view"
            android:layout_marginStart="10dp"
            android:text="@string/camera_text"
            />
        <TextView
            android:id="@+id/gallery_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/camera_text_image_view"
            android:layout_marginStart="10dp"
            android:text="@string/gallery_text"
            />
        <TextView
            android:id="@+id/text_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/gallery_image_view"
            android:layout_marginStart="10dp"
            android:text="@string/text_text"
            />
        <TextView
            android:id="@+id/save_text_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/save_text"
            />
    </RelativeLayout>
</LinearLayout>